# _works

./: .gitignore  count_change.c  howto_make_an_awesomewm_widget.org  sorts.c
arm_blank_blink/: blink-c3.lst  boot.s  build.sh  main.c  mem.ld
arm_cmsis_works/: blink-c3.lst  boot.s  build.sh  debug.sh  isr.c  load_section.h  rcc.h
arm_cmsis_works/MCU/: stm32f103xb.h
arm_cmsis_works_0/: flash.sh  layout.ld  led.h  mem.ld  systick.h  systick_blink.c
arm_cmsis_works_1/: Makefile  compile_flags.txt  linker.ld  load.h  readme.org
exp_mips/: README.org
figlet_clock/: clock.sh
hex2asm/: AS2_notes.c
magniss_test_task_solution/: lobz0.csv  lobz1.csv  lobz2.csv  log.gp  magni2.c  readme.org
mballocator/: main.cpp
opencm3_f103_usb/: Makefile  compile_flags.txt  my-project.c  usb_conf_dscrptr.h  usb_dev_dscrptr.h  usb_endp_dscrptr.h  usb_func_dscrptr.h  usb_hid_report_dscrptr.h  usb_iface_dscrptr.h
sqlite_works/: build.sh  create_db.sql  dirworks.cpp  dirworks.hpp  main.cpp  sqlite_works.cpp  sqlite_works.hpp
tasker-asm-tests/: Makefile  compile_flags.txt  my-project.c
template-libopencm3-cmake/: CMakeLists.txt  my-project.cpp
template-libopencm3-cmake/cmake/: stm32f103.cmake  toolchain-arm-none-eabi.cmake
tuimagic/: CMakeLists.txt  area.h  conf_area.c  conf_area.h  conf_parser.c  conf_parser.h  darray.c  darray.h  infoblock.c  infoblock.h  infoline.c  infoline.h  main.c  readme.org  theme.c  theme.h  widget_header.c  widget_header.h
zephyr_notes/: howto_install_ncs_toolchain_manual.org  howto_zephyr_usb_composite_acm_dfu_mass_storage.org
(+14 files in other folders)
